tenzir/integration/data/reference/parser/test_control_flow/step_00.ref
error: expected one of: newline, pipe, this_, identifier
 --> /dev/stdin:2:1
  |
2 | if b == 42 {
  | ^^ got if_
  |